# cortex-plugin-dev

./: .gitignore  Cargo.toml  README.md  README.zh.md  conformance.toml  manifest.toml  risk.toml  sbom.spdx.json
skills/commit/: SKILL.md
skills/context-budget/: SKILL.md
skills/create-pr/: SKILL.md
skills/debug/: SKILL.md
skills/explore/: SKILL.md
skills/implement/: SKILL.md
skills/incident/: SKILL.md
skills/refactor/: SKILL.md
skills/release/: SKILL.md
skills/review-pr/: SKILL.md
skills/security/: SKILL.md
skills/simplify/: SKILL.md
skills/test/: SKILL.md
src/: lib.rs  symbol_cache.rs  treesitter.rs
src/tools/: ask.rs  brief.rs  diagnostics.rs  diff.rs  docker.rs  env.rs  file_ops.rs  git.rs  glob.rs  grep.rs  http_client.rs  lsp.rs  mod.rs  notebook.rs  plan.rs  process.rs  project.rs  quality.rs  repl.rs  runtime.rs  send_message.rs  sql.rs  symbols.rs  task.rs  team.rs  todo.rs  worktree.rs
tests/: file_ops.rs  project_quality.rs  symbol_cache.rs  tool_state.rs  treesitter.rs
tests/support/: result.rs  runtime.rs  temp.rs
