[package]
name = "cortex-plugin-dev"
version = "1.6.1"
edition = "2024"
license = "MIT"
publish = false

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cortex-sdk = "1.6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ignore = "0.4"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
streaming-iterator = "0.1"
rusqlite = { version = "0.35", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
